samples/_failures_safe/1761296800_389580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a46da48.c: In function ‘main’:
./samples/SAFE/__tmp_9a46da48.c:157:9: error: expected expression at end of input
  157 |         case
      |         ^~~~
./samples/SAFE/__tmp_9a46da48.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a46da48.c:157:9: error: expected declaration or statement at end of input
